--- a/inventory_reporting/report/inv_report_views.xml
+++ b/inventory_reporting/report/inv_report_views.xml
@@ -3,11 +3,11 @@
     <data>
         <report
             string="Inv - Activity FG Report"
-            id="action_report_inv_activity_finish_goods"
-            model="wizard.inv.finish.goods"
+            id="action_report_inv_activity_report"
+            model="wizard.inv.activity.reports"
             report_type="qweb-pdf"
-            name="inventory_reporting.report_inv_activity_finish_goods"
-            file="inventory_reporting.report_inv_activity_finish_goods"
+            name="inventory_reporting.report_inv_activity_reports"
+            file="inventory_reporting.report_inv_activity_reports"
         />
     </data>
 </odoo>
