--- a/inventory_reporting/wizard/wizard_inv_activity_component_report_view.xml
+++ b/inventory_reporting/wizard/wizard_inv_activity_component_report_view.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-    <record id="view_wizard_inv_activity_report_form" model="ir.ui.view">
-        <field name="name">wizard.inv.activity.reports.form</field>
-        <field name="model">wizard.inv.activity.reports</field>
+    <record id="view_wizard_inv_activity_component_report_form" model="ir.ui.view">
+        <field name="name">wizard.inv.activity.component.reports.form</field>
+        <field name="model">wizard.inv.activity.component.reports</field>
         <field name="type">form</field>
         <field name="priority" eval="8"/>
         <field name="arch" type="xml">
-            <form string="INV FG Report">
+            <form string="INV Component Report">
                 <group>
                     <group>
                         <field name="date_start" required="1"/>
-<!--                        <field name="sku"/>-->
                         <field name="product_id" context="{'default_code':1}" options="{'no_create_edit': True}"/>
                     </group>
                     <group>
@@ -20,7 +19,7 @@
                 </group>
 
                 <footer>
-                    <button string='Print PDF' name="print_inv_pdf_report"
+                    <button string='Print PDF123' name="print_inv_pdf_report_component"
                             type="object" class="btn-primary"/>
                     <button string='Print Excel' name="print_excel_report"
                             type="object" class="btn-primary"/>
@@ -30,38 +29,17 @@
             </form>
         </field>
     </record>
-    <record model="ir.actions.act_window"
-            id="action_wizard_inv_finish_goods_view">
-        <field name="name">Activity FG Report</field>
-        <field name="type">ir.actions.act_window</field>
-        <field name="res_model">wizard.inv.activity.reports</field>
-        <field name="view_type">form</field>
-        <field name="view_mode">form</field>
-        <field name="view_id" ref="view_wizard_inv_activity_report_form"/>
-        <field name="context">{'report_context': 'finish_goods'}</field>
-        <field name="target">new</field>
-    </record>
 
     <record model="ir.actions.act_window"
             id="action_wizard_inv_act_comp_view">
         <field name="name">Activity Component Report</field>
         <field name="type">ir.actions.act_window</field>
-        <field name="res_model">wizard.inv.activity.reports</field>
+        <field name="res_model">wizard.inv.activity.component.reports</field>
         <field name="view_type">form</field>
         <field name="view_mode">form</field>
-        <field name="view_id" ref="view_wizard_inv_activity_report_form"/>
-        <field name="context">{'report_context': 'activity_component'}</field>
+        <field name="view_id" ref="view_wizard_inv_activity_component_report_form"/>
         <field name="target">new</field>
     </record>
-
-    <menuitem id="menu_inv_report" name="Inventory Reporting"
-              parent="stock.menu_warehouse_report"
-              sequence="5"/>
-
-    <menuitem id="menu_inv_finish_good_report"
-              name="Inv Finish Good Report"
-              action="action_wizard_inv_finish_goods_view"
-              parent="menu_inv_report" sequence="1"/>
 
     <menuitem id="menu_inv_act_comp_report"
               name="Inv Activity Component Report"
