--- a/inventory_reporting/views/sale_order_view.xml
+++ b/inventory_reporting/views/sale_order_view.xml
@@ -2,7 +2,7 @@
 <odoo>
     <!--print_report method is called from server action-->
     <record id="action_sale_report" model="ir.actions.server">
-        <field name="name">Sale Report</field>
+        <field name="name">SO Open Order Report</field>
         <field name="type">ir.actions.server</field>
         <field name="model_id" ref="model_sale_order"/>
         <field name="state">code</field>
@@ -11,7 +11,20 @@
         </field>
     </record>
 
+    <record id="action_sale_report_excel" model="ir.actions.server">
+        <field name="name">SO Open Order Report Excel</field>
+        <field name="type">ir.actions.server</field>
+        <field name="model_id" ref="model_sale_order"/>
+        <field name="state">code</field>
+        <field name="code">
+            action = model.print_excel_report()
+        </field>
+    </record>
+
     <!--Menu to Print Sale Report-->
-    <menuitem id="menu_sale_report" name="Print Sale Report"
-              parent="sale.menu_sale_report" sequence="110" action="action_sale_report"/>
+    <menuitem id="menu_sale_report" name="SO Open Order Report"
+              parent="menu_inv_report" sequence="3" action="action_sale_report"/>
+
+    <menuitem id="menu_sale_report_excel" name="SO Open Order Excel Report"
+              parent="menu_inv_report" sequence="4" action="action_sale_report_excel"/>
 </odoo>
