--- a/inventory_reporting/report/inv_report_views.xml
+++ b/inventory_reporting/report/inv_report_views.xml
@@ -25,6 +25,13 @@
             file="inventory_reporting.report_so_open_order"
             name="inventory_reporting.report_so_open_order"
         />
-
+        <report
+            id="action_report_so_line_item"
+            string="SO Line Item"
+            model="sale.order"
+            report_type="qweb-pdf"
+            file="inventory_reporting.report_so_line_item"
+            name="inventory_reporting.report_so_line_item"
+        />
     </data>
 </odoo>
