--- a/inventory_reporting/report/so_line_item_report_template.xml
+++ b/inventory_reporting/report/so_line_item_report_template.xml
@@ -1,32 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <template id="report_so_open_order">
+    <template id="report_so_line_item">
         <t t-call="web.html_container">
             <t t-foreach="docs" t-as="o">
                 <t t-call="web.external_layout">
                     <t class="page">
                         <div class="text-center">
-                            <h2>Open Sale Order Report</h2>
+                            <h2>Open Sale Order Line Item Report</h2>
                         </div>
                         <t t-foreach="o.get_open_order()" t-as="so_info">
-                            <br/>
-                            <b>Sale Order Number - </b>
-                                <t t-esc="so_info['order'].name"/>
-                            &#160;
-                            <b>Customer - </b>
-                                <t t-esc="so_info['order'].partner_id.name"/>
-
                             <table class="table table-condensed">
                                 <thead>
                                     <tr>
-                                        <th>Product</th>
-                                        <th>Description</th>
-                                        <th>Req. Date</th>
+                                        <th>SO Number</th>
+                                        <th>Customer</th>
+                                        <th>Order Date</th>
+                                        <th>Item</th>
                                         <th>UOM</th>
                                         <th>Ordered Qty</th>
-                                        <th>Ship Qty</th>
-                                        <th>Onhand Qty</th>
-                                        <th>Open Qty</th>
+                                        <th>Unit Price</th>
+                                        <th>Discount</th>
+                                        <th>Net Price</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -34,13 +28,16 @@
                                        t-as="line">
                                         <tr>
                                             <td>
-                                                <span t-esc="line['name']"/>
+                                                <span t-esc="line['order'].name"/>
                                             </td>
                                             <td>
-                                                <span t-esc="line['description']"/>
+                                                <span t-esc="line['order'].partner_id.name"/>
                                             </td>
                                             <td class="text-right">
-                                                <span t-esc="line['req_date']"/>
+                                                <span t-esc="line['order_date']"/>
+                                            </td>
+                                            <td>
+                                                <span t-esc="line['name']"/>
                                             </td>
                                             <td>
                                                 <span t-esc="line['product_uom']"/>
@@ -49,13 +46,13 @@
                                                 <span t-esc="line['order_qty']"/>
                                             </td>
                                             <td class="text-right">
-                                                <span t-esc="line['ship_qty']"/>
+                                                <span t-esc="line['rate']"/>
                                             </td>
                                             <td class="text-right">
-                                                <span t-esc="line['on_hand']"/>
+                                                <span t-esc="line['discount']"/>
                                             </td>
                                             <td class="text-right">
-                                                <span t-esc="line['open_qty']"/>
+                                                <span t-esc="line['total']"/>
                                             </td>
                                         </tr>
                                     </t>
