PhD Fitness - Inv - Activity Comp

--- a/inventory_reporting/report/so_line_item_report_template.xml
+++ b/inventory_reporting/report/so_line_item_report_template.xml
@@ -46,7 +46,7 @@
                                                 <span t-esc="line['order_qty']"/>
                                             </td>
                                             <td class="text-right">
-                                                <span t-esc="line['rate']"/>
+                                                <span t-esc="line['unit_price']"/>
                                             </td>
                                             <td class="text-right">
                                                 <span t-esc="line['discount']"/>
