--- a/inventory_reporting/report/so_open_order_report_template.xml
+++ b/inventory_reporting/report/so_open_order_report_template.xml
@@ -27,6 +27,8 @@
                                         <th>Ship Qty</th>
                                         <th>Onhand Qty</th>
                                         <th>Open Qty</th>
+                                        <th>Rate</th>
+                                        <th>Total</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -56,6 +58,12 @@
                                             </td>
                                             <td class="text-right">
                                                 <span t-esc="line['open_qty']"/>
+                                            </td>
+                                            <td class="text-right">
+                                                <span t-esc="line['rate']"/>
+                                            </td>
+                                            <td class="text-right">
+                                                <span t-esc="line['total']"/>
                                             </td>
                                         </tr>
                                     </t>
