--- a/inventory_reporting/report/so_open_order_report_template.xml
+++ b/inventory_reporting/report/so_open_order_report_template.xml
@@ -26,7 +26,7 @@
                                         <th>Ordered Qty</th>
                                         <th>Ship Qty</th>
                                         <th>Onhand Qty</th>
-                                        <th>Open Qty</th>
+                                        <th>Open TEST Qty</th>
                                         <th>Rate</th>
                                         <th>Total</th>
                                     </tr>
