--- a/inventory_reporting/report/so_open_order_report_template.xml
+++ b/inventory_reporting/report/so_open_order_report_template.xml
@@ -60,10 +60,10 @@
                                                 <span t-esc="line['open_qty']"/>
                                             </td>
                                             <td class="text-right">
-                                                <span t-esc="line['open_qty']"/> <!--rate-->
+                                                <span t-esc="line['rate']"/>
                                             </td>
                                             <td class="text-right">
-                                                <span t-esc="line['on_hand']"/> <!--total-->
+                                                <span t-esc="line['total']"/>
                                             </td>
                                         </tr>
                                     </t>
