--- a/inventory_reporting/report/inv_activity_finish_good_report_template.xml
+++ b/inventory_reporting/report/inv_activity_finish_good_report_template.xml
@@ -6,6 +6,17 @@
                 <div class="page">
                     <div class="text-center">
                         <h2>Inventory Activity Report - Finished Goods</h2>
+                        <h4>
+                            <span t-esc="datetime.datetime.strptime(
+                            str(data['form']['date_start']),
+                            '%Y-%m-%d').strftime('%m/%d/%Y')"/>
+                            -
+                            <t t-if="data['form']['date_end']">
+                                <span t-esc="datetime.datetime.strptime(
+                            str(data['form']['date_end']),
+                            '%Y-%m-%d').strftime('%m/%d/%Y')"/>
+                            </t>
+                        </h4>
                     </div>
                     <t t-foreach="data['inv_data']" t-as="inv">
                         <br/>
@@ -36,8 +47,9 @@
                                     <td></td>
                                     <t t-if="inv.qty_available &lt; 0">
                                         <td class="text-right"
-                                            style="color:red;">(<span
-                                                t-esc="abs(inv.qty_available)"/>
+                                            style="color:red;">(
+                                            <span
+                                                    t-esc="abs(inv.qty_available)"/>
                                             )
                                         </td>
                                     </t>
@@ -72,7 +84,8 @@
                                         <t t-if="rec['avail_inv'] &lt; 0">
                                             <td class="text-right"
                                                 style="color:red;">(<span
-                                                    t-esc="abs(rec['avail_inv'])"/>)
+                                                    t-esc="abs(rec['avail_inv'])"/>
+                                                )
                                             </td>
                                         </t>
                                         <t t-if="rec['avail_inv'] &gt; 0 or rec['avail_inv'] == 0.0">
