--- a/inventory_reporting/report/so_line_item_report_template.xml
+++ b/inventory_reporting/report/so_line_item_report_template.xml
@@ -37,7 +37,7 @@
                                                 <span t-esc="line['order_date']"/>
                                             </td>
                                             <td>
-                                                <span t-esc="line['name']"/>
+                                                <span t-esc="line['name'].name"/>
                                             </td>
                                             <td>
                                                 <span t-esc="line['product_uom']"/>
