--- a/inventory_reporting/report/so_history_report_template.xml
+++ b/inventory_reporting/report/so_history_report_template.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <template id="report_so_summary">
+    <template id="report_so_history">
         <t t-call="web.html_container">
             <t t-foreach="docs" t-as="o">
                 <t t-call="web.external_layout">
                     <t class="page">
                         <div class="text-center">
-                            <h2>Sale Order Summary Report</h2>
+                            <h2>Sale Order History Report</h2>
                             <h4>
                                 <span t-esc="datetime.datetime.strptime(
                             str(o.date_start),
@@ -20,58 +20,67 @@
                             </h4>
                         </div>
                         <br/>
-                        <table class="table table-condensed">
-                            <thead>
-                                <tr>
-                                    <th>SO Number</th>
-                                    <th>Partner</th>
-                                    <th>PO Number</th>
-                                    <th>Order Date</th>
-                                    <th>Req. Date</th>
-                                    <th>Completed Date</th>
-                                    <th>Amount</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <t t-foreach="o.get_data()" t-as="so_info">
-                                    <t t-foreach="so_info['data']" t-as="data">
+                        <t t-foreach="o.get_data()" t-as="so_info">
+                            <br/>
+                            <b>Sale Order Number - </b>
+                                <t t-esc="so_info['order'].name"/>
+                            &#160;
+                            <b>PO Number - </b>
+                                <t t-esc="so_info['order'].client_order_ref"/>
+                            &#160;
+                            <b>Customer - </b>
+                                <t t-esc="so_info['order'].partner_id.name"/>
+
+                            <table class="table table-condensed">
+                                <thead>
+                                    <tr>
+                                        <th>Product</th>
+                                        <th>Description</th>
+                                        <th>Req. Date</th>
+                                        <th>Ordered Qty</th>
+                                        <th>Ship Qty</th>
+                                        <th>Onhand Qty</th>
+                                        <th>Open Qty</th>
+                                        <th>Rate</th>
+                                        <th>Total</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <t t-foreach="so_info['lines']"
+                                       t-as="line">
                                         <tr>
                                             <td>
-                                                <span t-esc="data['so_name']"/>
+                                                <span t-esc="line['name'].default_code"/>
                                             </td>
                                             <td>
-                                                <span t-esc="data['partner']"/>
-                                            </td>
-                                            <td>
-                                                <span t-esc="data['po_number']"/>
+                                                <span t-esc="line['description']"/>
                                             </td>
                                             <td class="text-right">
-                                                <span t-esc="data['so_date']"/>
+                                                <span t-esc="line['req_date']"/>
                                             </td>
                                             <td class="text-right">
-                                                <span t-esc="data['expected_date']"/>
+                                                <span t-esc="line['order_qty']"/>
                                             </td>
                                             <td class="text-right">
-                                                <span t-esc="data['completed_date']"/>
+                                                <span t-esc="line['ship_qty']"/>
                                             </td>
                                             <td class="text-right">
-                                                <span t-esc="data['amt']"/>
+                                                <span t-esc="line['on_hand']"/>
+                                            </td>
+                                            <td class="text-right">
+                                                <span t-esc="line['open_qty']"/>
+                                            </td>
+                                            <td class="text-right">
+                                                <span t-esc="line['rate']"/>
+                                            </td>
+                                            <td class="text-right" width="15%">
+                                                <span t-esc="line['total']"/>
                                             </td>
                                         </tr>
                                     </t>
-                                    <tr class="text-right">
-                                        <td colspan="5">
-                                            <b>Total</b>
-                                        </td>
-                                        <td colspan="6">
-                                            <b>
-                                                <span t-esc="so_info['total']"/>
-                                            </b>
-                                        </td>
-                                    </tr>
-                                </t>
-                            </tbody>
-                        </table>
+                                </tbody>
+                            </table>
+                    </t>
                     </t>
                 </t>
             </t>
