--- a/inventory_reporting/wizard/wizard_so_history_report.xml
+++ b/inventory_reporting/wizard/wizard_so_history_report.xml
@@ -1,24 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-    <record id="view_wizard_so_summary_form" model="ir.ui.view">
-        <field name="name">wizard.so.summary.form</field>
-        <field name="model">wizard.so.summary</field>
+    <record id="view_wizard_so_history_form" model="ir.ui.view">
+        <field name="name">wizard.so.history.form</field>
+        <field name="model">wizard.so.history</field>
         <field name="type">form</field>
         <field name="priority" eval="8"/>
         <field name="arch" type="xml">
-            <form string="SO Summary">
+            <form string="SO History">
                 <group>
                     <group>
                         <field name="date_start" required="1"/>
+                        <field name="state_all"/>
+                        <field name="state_sent"/>
+                        <field name="state_done"/>
                     </group>
                     <group>
                         <field name="date_end"/>
+                        <field name="state_draft"/>
+                        <field name="state_sale"/>
+                        <field name="state_cancel"/>
                     </group>
                 </group>
                 <footer>
-                    <button string='Print PDF' name="print_summary_pdf_report"
+                    <button string='Print PDF' name="print_history_pdf_report"
                             type="object" class="btn-primary"/>
-                    <button string='Print Excel' name="print_summary_excel_report"
+                    <button string='Print Excel' name="print_history_excel_report"
                             type="object" class="btn-primary"/>
                     <button string="Cancel" class="btn-secondary"
                             special="cancel"/>
@@ -27,19 +33,19 @@
         </field>
     </record>
     <record model="ir.actions.act_window"
-            id="action_wizard_so_summary_view">
-        <field name="name">SO Summary Report</field>
+            id="action_wizard_so_history_view">
+        <field name="name">SO History Report</field>
         <field name="type">ir.actions.act_window</field>
-        <field name="res_model">wizard.so.summary</field>
+        <field name="res_model">wizard.so.history</field>
         <field name="view_type">form</field>
         <field name="view_mode">form</field>
-        <field name="view_id" ref="view_wizard_so_summary_form"/>
+        <field name="view_id" ref="view_wizard_so_history_form"/>
         <field name="target">new</field>
     </record>
 
-    <menuitem id="menu_so_summary_report"
-              name="SO Summary Report"
-              action="action_wizard_so_summary_view"
-              parent="menu_inv_report" sequence="7"/>
+    <menuitem id="menu_so_history_report"
+              name="SO History Report"
+              action="action_wizard_so_history_view"
+              parent="menu_inv_report" sequence="8"/>
 
 </odoo>
