--- a/inventory_reporting/report/so_open_order_report_template.xml
+++ b/inventory_reporting/report/so_open_order_report_template.xml
@@ -19,7 +19,7 @@
                             <b>Customer - </b>
                                 <t t-esc="so_info['order'].partner_id.name"/>
 
-                            <table class="table table-condensed" width="100%">
+                            <table class="table table-condensed">
                                 <thead>
                                     <tr>
                                         <th>Product</th>
